<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Potlatch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server">Server IP or Hostname</string>
    <string name="serverIP">https://10.0.3.2:8443</string>
    <string name="localhost">https://10.0.3.2:8443</string>
    <string name="title_activity_new_gift">Add New</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_label">Gift Label</string>
    <string name="gift">Gift</string>
    <string name="label_new_gift_title">Title</string>
    <string name="label_new_gift_text">Text</string>
    <string name="button_new_gift_save">Save</string>
    <string name="button_new_gift_cancel">Cancel</string>
    <string name="title_activity_gift_display">Detail</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="text_update_one_minute">1 minute</string>
    <string name="text_update_five_minutes">5 minutes</string>
    <string name="text_update_sixty_minutes">60 minutes</string>

    <color name="yellow">#fffff67f</color>
    <color name="brown">#ffffcc00</color>
    <color name="light">#ffcccccc</color>

    <string name="title_activity_settings">Settings</string>
    <string name="button_label_save_preference">Save</string>
    <string name="title_activity_profile">Top Giver</string>
    <string name="label_user_name">User Name</string>
    <string name="label_number_gifts">Number of Gifts</string>
    <string name="label_num_touches">Number of Touches</string>
    <string name="text_label_update_frequency">Update Frequency</string>
    <string name="label_title_text">Title:</string>
    <string name="label_text_text">Text:</string>
    <string name="dialog_message">Are you sure to delete this Gift?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="button_label_cancel_preference">Cancel</string>
    <string name="new_gift_title">Gift Title</string>
    <string name="new_gift_description">How do you feel right now?</string>
    <string name="user_detail_text_hint">What do you feel? (optional)</string>

</resources>
