<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/cbNoObscene"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO obscene gifts" />

    <CheckBox
        android:id="@+id/cbAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Auto update" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_label_update_frequency"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:padding="10dp" />

    <Spinner
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:id="@+id/spUpdateRate"
        android:spinnerMode="dialog"
        android:gravity="end"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_label_save_preference"
            android:id="@+id/btSavePref"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_label_cancel_preference"
            android:id="@+id/btCancelPref"/>
        </LinearLayout>
</LinearLayout>