<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.coursera.androidcapstone.potlatch.views">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/gift"
        android:scaleType="fitXY"
        android:padding="8dp"
        android:src="@drawable/user0" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/ivProfileImage"
        android:text="@string/label_user_name"
        android:textColor="@color/primary_text_default_material_light"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/tvUserName"
        android:layout_toEndOf="@id/ivProfileImage"
        android:layout_alignBottom="@id/ivProfileImage" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/gift"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvNumGift"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            android:text="@string/label_number_gifts"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/imageView"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/ivTouchedIcon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/gift"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/tvNumGift"
            android:src="@drawable/touched_yes" />

        <TextView
            android:id="@+id/tvNumTouched"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="4dp"
            android:text="@string/label_num_touches"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/ivTouchedIcon"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
</RelativeLayout>

    